<resources>
    <string name="app_name">JUx</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="facebook_app_id">100294297303472</string>
    <string name="fb_login_protocol_scheme">fb100294297303472</string>


    <string name="slide_1_title">Be Updated</string>
    <string name="slide_1_desc">Make sure you\'re always updated with what\'s going on in Jadavpur University.</string>

    <string name="slide_2_title">The Highlights</string>
    <string name="slide_2_desc">Find interesting stuff going on around you! \nDon\'t forget to participate.</string>

    <string name="slide_3_title">Read Offline</string>
    <string name="slide_3_desc">Save articles offline so that you can read them, whenever you want!</string>

    <string name="slide_4_title">Announcements</string>
    <string name="slide_4_desc">Keep tabs on any important news from the administration.</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="welcome">Welcome!</string>
    <string name="may_the_force_be_with_you">May the Force be with you.</string>
    <string name="create_your_account">Create your account</string>
    <string name="name">Name</string>
    <string name="full_bleed_image">Full bleed Image</string>
    <string name="transition_login">transition1</string>
    <string name="terms"><u>Terms and Conditions</u></string>
    <string name="i_agree_to_the_terms_and_conditions">I agree to the <u>terms and conditions</u>.</string>
    <string name="title_activity_dashboard">My JU Journey</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="API_KEY">29n2736smsyw</string>
    <string name="API_TOKEN">eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhY3Rpb24iOiIqIiwidXNlcl9pZCI6IioiLCJyZXNvdXJjZSI6ImFuYWx5dGljcyJ9.ar1XqE0zkRE_txlESdMUJV0kEXXGYZ4XhD6eDNk_Mz4</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="title_activity_canteen_list">Canteens</string>
    <string name="title_location_permission">Need location access</string>
    <string name="text_location_permission">We require the location to find the nearest canteens around you.</string>
    <string name="ok">OK</string>
    <string name="share">Share</string>
    <string name="bookmark">Bookmark</string>
    <string name="title_activity_bookmarks">BookmarksActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_explore">ExploreActivity</string>
    <string name="edit">Edit</string>
    <string name="sl_canteen">SL Campus</string>
    <string name="ju_canteen">Jadavpur University</string>
    <string name="title_activity_canteen_menu">CanteenMenu</string>
    <string name="title_activity_magazine">MagazineActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="lorem_ipsum">\"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi et pharetra quam, at aliquam ipsum. Praesent euismod purus vel massa elementum aliquet quis tempor velit. Suspendisse velit tellus, finibus vel sodales non, tincidunt vitae est. In quis nisi viverra, lacinia sem non, pellentesque nulla.\"\n\n\"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi et pharetra quam, at aliquam ipsum. Praesent euismod purus vel massa elementum aliquet quis tempor velit. Suspendisse velit tellus, finibus vel sodales non, tincidunt vitae est. In quis nisi viverra, lacinia sem non, pellentesque nulla.\"\n\n\"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi et pharetra quam, at aliquam ipsum. Praesent euismod purus vel massa elementum aliquet quis tempor velit. Suspendisse velit tellus, finibus vel sodales non, tincidunt vitae est. In quis nisi viverra, lacinia sem non, pellentesque nulla.\"\n\"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi et pharetra quam, at aliquam ipsum. Praesent euismod purus vel massa elementum aliquet quis tempor velit. Suspendisse velit tellus, finibus vel sodales non, tincidunt vitae est. In quis nisi viverra, lacinia sem non, pellentesque nulla.\"\n\n</string>
    <string name="journal">\@jujournal</string>
    <string name="title_activity_club">ClubActivity</string>
    <string name="title_activity_events_details">EventsDetailsActivity</string>
    <string name="placeholder_text">Hi! I am presently too lazy to come up with a creative descirption for myself, so I\'ll leave this default message here instead.</string>
    <string name="unregister">UNREGISTER</string>
    <string name="register">REGISTER</string>

</resources>
